# pokemon-csv-upload

./: .gitignore  LICENSE  README.md  compose.yaml
.sqlx/: query-4af34313e080c7cc36fa5fbe5aa6e69b069ec807d3c0c806048898a8be415d0a.json  query-57aa5304d432201e7f78b79519d5c838cc2365577d23b9171d6def2f0afc3af7.json  query-58d5a85f7abb8568b3003ed7a6945e92952237388e825ccf48240a50237deab2.json  query-cb6af64813686939cca07887b583e90748b5ea6535f2a2afc4622bb83d1312e3.json  query-da7fa67bcef4aef9ca312600228468ac720e924d9d09b2e9ad8a73c0995262ea.json
crates/upload-pokemon-data/: Cargo.toml
crates/upload-pokemon-data/src/: db.rs  main.rs  pokemon_csv.rs
db/: README.md  schema.sql
